--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="content">
             <!-- Logo/Brand -->
             <div class="logo">
-                <h1>TicketAdda.in</h1>
+                <h1>TicketAdda</h1>
             </div>
             
             <!-- Main Message -->
@@ -51,21 +51,21 @@
             
             <!-- Social Links -->
             <div class="social-links">
-                <a href="#" class="social-link" aria-label="LinkedIn">
+                <a href="https://www.linkedin.com/company/ticketadda/" class="social-link" aria-label="LinkedIn">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/>
                         <rect x="2" y="9" width="4" height="12"/>
                         <circle cx="4" cy="4" r="2"/>
                     </svg>
                 </a>
-                <a href="#" class="social-link" aria-label="Instagram">
+                <a href="https://www.instagram.com/ticketadda.in/" class="social-link" aria-label="Instagram">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
                         <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/>
                         <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/>
                     </svg>
                 </a>
-                <a href="#" class="social-link" aria-label="Twitter">
+                <a href="https://x.com/ticketadda" class="social-link" aria-label="Twitter">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"/>
                     </svg>
