--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TicketAdda.in - Under Construction</title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init('nRRLaf6LXw6OLVSgZ'); // Public Key
+   })();
+</script>
+
 </head>
 <body>
     <div class="container">
