--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="content">
             <!-- Logo/Brand -->
             <div class="logo">
-                <h1>TicketAdda</h1>
+                <img src="image.png" alt="TicketAdda Logo">
             </div>
             
             <!-- Main Message -->
