--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TicketAdda</title>
+    <title>TicketAdda.in - Under Construction</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script type="text/javascript">
@@ -18,7 +18,7 @@
         <div class="content">
             <!-- Logo/Brand -->
             <div class="logo">
-                <img src="image (1).png" alt="TicketAdda Logo">
+                <img src="image.png" alt="TicketAdda Logo">
             </div>
             
             <!-- Main Message -->
