--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
     </div>
     
-    <script type="module" src="script.js"></script>
+    <script type="module" src="main.js"></script>
     <script type="text/javascript">
         (function(){
            emailjs.init('kAZQ9dMKCEOt54Z8l'); // new public key
