--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TicketAdda</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="style.css">
 
   <!-- Load EmailJS library -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <script>
     (function(){
-      emailjs.init("kAZQ9dMKCEOt54Z8l"); // ✅ Use only your correct Public Key
+      emailjs.init("kAZQ9dMKCEOt54Z8l"); // ✅ Your correct Public Key
     })();
   </script>
+
+  <!-- ✅ Google reCAPTCHA v2 -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
+  <style>
+    /* Simple inline styling for messages */
+    .success-message { color: green; display: none; margin-top: 10px; }
+    .error-message { color: red; display: none; margin-top: 10px; }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -38,47 +48,58 @@
       <!-- Email Subscription -->
       <div class="email-section">
         <p class="email-text">Be the first to know when we launch</p>
-        <form class="email-form" id="emailForm">
+
+        <!-- ✅ Form pointing to PHP backend -->
+        <form action="verify.php" method="POST" class="email-form" id="emailForm">
           <div class="input-group">
             <input 
               type="email" 
+              name="email"
               id="emailInput"
               placeholder="Enter your email address" 
               required
             >
             <button type="submit" id="submitBtn">
               <span class="btn-text">Notify Me</span>
-              <div class="loading-spinner" id="loadingSpinner"></div>
             </button>
           </div>
+
+          <!-- ✅ reCAPTCHA Widget -->
+          <div class="g-recaptcha" 
+               data-sitekey="6LdAENErAAAAAIFJKfnjjhUb09jzAl0awQ70KBki">
+          </div>
+
           <div class="success-message" id="successMessage">
             Thank you! We'll notify you when we launch.
+          </div>
+          <div class="error-message" id="errorMessage">
+            Captcha failed. Please try again.
           </div>
         </form>
       </div>
 
       <!-- Social Links -->
       <div class="social-links">
-                <a href="https://www.linkedin.com/company/ticketadda/" class="social-link" aria-label="LinkedIn">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/>
-                        <rect x="2" y="9" width="4" height="12"/>
-                        <circle cx="4" cy="4" r="2"/>
-                    </svg>
-                </a>
-                <a href="https://www.instagram.com/ticketadda.in/" class="social-link" aria-label="Instagram">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
-                        <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/>
-                        <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/>
-                    </svg>
-                </a>
-                <a href="https://x.com/ticketadda" class="social-link" aria-label="Twitter">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"/>
-                    </svg>
-                </a>
-            </div>
+        <a href="https://www.linkedin.com/company/ticketadda/" class="social-link" aria-label="LinkedIn">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/>
+                <rect x="2" y="9" width="4" height="12"/>
+                <circle cx="4" cy="4" r="2"/>
+            </svg>
+        </a>
+        <a href="https://www.instagram.com/ticketadda.in/" class="social-link" aria-label="Instagram">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
+                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/>
+                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/>
+            </svg>
+        </a>
+        <a href="https://x.com/ticketadda" class="social-link" aria-label="Twitter">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"/>
+            </svg>
+        </a>
+    </div>
 
       <!-- Footer -->
       <div class="footer">
@@ -87,7 +108,50 @@
     </div>
   </div>
 
-  <!-- Load your main JS after EmailJS -->
-  <script type="module" src="main.js"></script>
+  <!-- JS to handle showing messages without page reload -->
+  <script>
+    const form = document.getElementById("emailForm");
+    const successMessage = document.getElementById("successMessage");
+    const errorMessage = document.getElementById("errorMessage");
+
+    form.addEventListener("submit", function(e) {
+      e.preventDefault(); // Prevent default form submission
+
+      // Get captcha response
+      const recaptchaResponse = grecaptcha.getResponse();
+      if (!recaptchaResponse) {
+        errorMessage.style.display = "block";
+        successMessage.style.display = "none";
+        return;
+      }
+
+      // Prepare form data
+      const formData = new FormData(form);
+
+      // Send to PHP via fetch
+      fetch("verify.php", {
+        method: "POST",
+        body: formData
+      })
+      .then(res => res.text())
+      .then(data => {
+        if (data.includes("Captcha Passed")) {
+          successMessage.style.display = "block";
+          errorMessage.style.display = "none";
+          form.reset();
+          grecaptcha.reset();
+        } else {
+          errorMessage.style.display = "block";
+          successMessage.style.display = "none";
+          grecaptcha.reset();
+        }
+      })
+      .catch(err => {
+        errorMessage.style.display = "block";
+        successMessage.style.display = "none";
+        grecaptcha.reset();
+      });
+    });
+  </script>
 </body>
 </html>
