--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div class="container">
+        <!-- Animated Background Elements -->
         <div class="bg-elements">
             <div class="floating-orb orb-1"></div>
             <div class="floating-orb orb-2"></div>
@@ -19,16 +20,19 @@
         </div>
 
         <div class="content">
+            <!-- Logo Section -->
             <div class="logo fade-in">
                 <h1>LUXURA</h1>
                 <div class="logo-subtitle">Premium Experience</div>
             </div>
 
+            <!-- Main Message -->
             <div class="main-message fade-in">
                 <h2>Something Amazing is Coming</h2>
                 <p>We're crafting an extraordinary experience that will redefine luxury. Get ready for the future.</p>
             </div>
 
+            <!-- Launch Info -->
             <div class="launch-info fade-in">
                 <div class="launch-badge">
                     <span>🚀 Launching Soon</span>
@@ -49,13 +53,14 @@
                 </div>
             </div>
 
+            <!-- Email Subscription -->
             <div class="email-section fade-in">
                 <p class="email-text">Be the first to know when we launch</p>
                 <form id="emailForm" class="email-form">
                     <div class="input-group">
-                        <input
-                            type="email"
-                            id="emailInput"
+                        <input 
+                            type="email" 
+                            id="emailInput" 
                             placeholder="Enter your email address"
                             required
                             autocomplete="email"
@@ -65,16 +70,19 @@
                             <div class="loading-spinner"></div>
                         </button>
                     </div>
-
+                    
+                    <!-- Invisible reCAPTCHA -->
                     <div id="recaptcha-container"></div>
                 </form>
-
+                
+                <!-- Messages -->
                 <div id="messageContainer" class="message-container">
                     <div id="successMessage" class="success-message"></div>
                     <div id="errorMessage" class="error-message"></div>
                 </div>
             </div>
 
+            <!-- Social Links -->
             <div class="social-links fade-in">
                 <a href="#" class="social-link" data-social="twitter">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
@@ -98,6 +106,7 @@
                 </a>
             </div>
 
+            <!-- Footer -->
             <div class="footer fade-in">
                 <p>&copy; 2025 Luxura. All rights reserved. | Crafted with precision.</p>
             </div>
