--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TicketAdda</title>
+    <title>TicketAdda | Relaunching Soon</title>
+    <meta name="description" content="TicketAdda — relaunching after New Year 2026 with faster performance, verified sellers and in-app ticket wallet. Sign up for early access.">
+    <meta property="og:title" content="TicketAdda | Relaunching Soon">
+    <meta property="og:description" content="We’re upgrading the platform after a big traffic surge. Temporary pause until relaunch — get notified for early access.">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="logo" href="logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome for icons (optional, but good for features list) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- Top sticky maintenance banner -->
+    <div class="maintenance-banner">
+        <p>Temporary Maintenance: High traffic & bug fixes — site paused till relaunch. We'll be back soon!</p>
+    </div>
+
     <div class="container">
         <!-- Animated Background Elements -->
         <div class="bg-elements">
@@ -22,14 +31,17 @@
         <div class="content">
             <!-- Logo Section -->
             <div class="logo fade-in">
-                <img width="320px" src="image.png" alt="TicketAdda Logo" class="logo-image">
+                <img src="image.png" alt="TicketAdda Logo" class="logo-image">
             </div>
 
             <!-- Main Message -->
             <div class="main-message fade-in">
-                <h2>India’s Premier Ticket Marketplace</h2>
-                <p>Be the first to get updates on events, concerts & sports</p>
+                <p>We’re upgrading the experience after New Year 2026 <br>faster, safer & bug-free.</p>
             </div>
+
+            <!-- Primary CTA Button -->
+            <button id="primaryCtaBtn" class="primary-cta-btn fade-in">Notify Me on Launch 🚀</button>
+            <p class="helper-text fade-in">Get early access + launch perks. Hum wapas aa rahe hain — better than before.</p>
 
             <!-- Launch Info -->
             <div class="launch-info fade-in">
@@ -56,15 +68,24 @@
                 </div>
             </div>
 
+            <!-- Progress / ETA visual -->
+            <div class="progress-section fade-in">
+                <p>Upgrade progress: <span id="progress-percentage">68%</span></p>
+                <div class="progress-bar">
+                    <div class="progress-fill" style="width: 68%;"></div>
+                </div>
+            </div>
+
             <!-- Email Subscription -->
-            <div class="email-section fade-in">
-                <p class="email-text">Be the first to know when we launch</p>
+            <div class="email-section fade-in" id="emailSubscriptionSection">
+                <h3 class="email-section-title">Be first in line — get early access</h3>
+                <p class="email-description">Sign up for launch updates, exclusive early-bird passes and bug-bounty credits.</p>
                 <form id="emailForm" class="email-form">
                     <div class="input-group">
-                        <input 
-                            type="email" 
-                            id="emailInput" 
-                            placeholder="Enter your email address"
+                        <input
+                            type="email"
+                            id="emailInput"
+                            placeholder="Enter your email"
                             required
                             autocomplete="email"
                         >
@@ -74,6 +95,7 @@
                         </button>
                     </div>
                 </form>
+                <p class="microcopy">We’ll only email launch news. No spam. Promise.</p>
 
                 <!-- Messages -->
                 <div id="messageContainer" class="message-container">
@@ -82,52 +104,75 @@
                 </div>
             </div>
 
-            <!-- Social Links -->
-            <div class="social-links fade-in">
-                <a href="https://x.com/ticketadda" class="social-link-x" data-social="x">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"/>
-                    </svg>
-                </a>
-                <a href="https://www.instagram.com/ticketadda.in/" class="social-link-ig" data-social="instagram">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
-                    </svg>
-                </a>
-                <a href="https://www.linkedin.com/company/ticketadda" class="social-link-linkedin" data-social="linkedin">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
-                    </svg>
-                </a>
+            <!-- “Why we paused” quick bullets -->
+            <div class="why-paused-section fade-in">
+                <h3>Why the pause?</h3>
+                <div class="reason-cards">
+                    <div class="reason-card">
+                        <i class="fas fa-chart-line"></i>
+                        <p>Insane recent traffic — we need to scale infra.</p>
+                    </div>
+                    <div class="reason-card">
+                        <i class="fas fa-bug"></i>
+                        <p>Bugs found during beta — fixing before full launch.</p>
+                    </div>
+                    <div class="reason-card">
+                        <i class="fas fa-shield-alt"></i>
+                        <p>Adding payment & security upgrades for safer checkout.</p>
+                    </div>
+                </div>
             </div>
 
-            <!-- Footer -->
-            <div class="footer fade-in">
-                <p>&copy; 2025 TicketAdda. All rights reserved.</p>
+            <!-- “What’s coming” features list -->
+            <div class="whats-coming-section fade-in">
+                <h3>What you’ll get after relaunch</h3>
+                <ul class="feature-list">
+                    <li><i class="fas fa-tachometer-alt"></i> Faster load times & smooth checkout</li>
+                    <li><i class="fas fa-check-circle"></i> Verified sellers & safer tickets</li>
+                    <li><i class="fas fa-wallet"></i> In-app ticket wallet + instant refunds</li>
+                    <li><i class="fas fa-map-marker-alt"></i> City-wise events feed + personalised recos</li>
+                    <li><i class="fas fa-star"></i> Early-bird passes for subscribers</li>
+                </ul>
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer fade-in">
+        <div class="footer-content">
+            <div class="footer-section contact-info">
+                <p>Contact: <a href="mailto:support@ticketadda.com">support@ticketadda.com</a></p>
+                <p>Press / Partnerships: <a href="mailto:partnerships@ticketadda.com">partnerships@ticketadda.com</a></p>
+            </div>
+            <div class="footer-section social-links-footer">
+                <p>Follow:</p>
+                <div class="social-links">
+                    <a href="https://x.com/ticketadda" class="social-link-x" data-social="x" aria-label="Follow us on X">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"/>
+                        </svg>
+                    </a>
+                    <a href="https://www.instagram.com/ticketadda.in/" class="social-link-ig" data-social="instagram" aria-label="Follow us on Instagram">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zM12 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                        </svg>
+                    </a>
+                    <a href="https://www.linkedin.com/company/ticketadda" class="social-link-linkedin" data-social="linkedin" aria-label="Follow us on LinkedIn">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+            <div class="footer-section legal-links">
+                <p>&copy; 2025 TicketAdda. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
     </script>
-    <script>
-const emails = JSON.parse(localStorage.getItem("subscribedEmails") || "[]");
-
-document.getElementById("notifyForm").addEventListener("submit", function(e){
-    e.preventDefault();
-    const email = document.getElementById("email").value.trim();
-
-    if(emails.includes(email)) {
-        alert("Aap already notify kar chuke hain!");
-    } else {
-        emails.push(email);
-        localStorage.setItem("subscribedEmails", JSON.stringify(emails));
-        alert("Thank you! You are subscribed.");
-        document.getElementById("email").value = "";
-    }
-});
-</script>
-
     <script src="script.js"></script>
 </body>
 </html>
