--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
     <footer class="footer fade-in">
         <div class="footer-content">
             <div class="footer-section contact-info">
-                <p>Contact: <a href="mailto:support@ticketadda.com">support@ticketadda.com</a></p>
-                <p>Press / Partnerships: <a href="mailto:partnerships@ticketadda.com">partnerships@ticketadda.com</a></p>
+                <p>Contact: <a href="mailto:support@ticketadda.in">support@ticketadda.in</a></p>
+                <p>Press / Partnerships: <a href="mailto:partnerships@ticketadda.in">partnerships@ticketadda.in</a></p>
             </div>
             <div class="footer-section social-links-footer">
                 <p>Follow:</p>
