--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- ✅ SEO Keywords -->
-    <meta name="keywords"
-        content="TicketAdda, event tickets, concert booking, online tickets, live shows, event management, music festivals, party tickets, standup comedy, sports events, Ticket Adda India">
+    <meta name="keywords" content="TicketAdda, ticket adda, TicketAdda India, online ticket booking, event tickets, concert booking, movie tickets, sports tickets, standup comedy shows, music festivals, party tickets, local events near me, live shows India, ticket wallet, verified sellers, buy event tickets online, sell event tickets, event discovery, upcoming concerts India, nightlife events, college fests, theater tickets, cricket tickets, IPL tickets, football match tickets, musical events, online ticket sales, TicketAdda offers, Noida events, Delhi concerts, Mumbai nightlife, Bangalore events, event app India, ticket booking app, live music gigs, electronic music events, comedy nights, theatre performances, event passes, club events, ticket deals India, cheap event tickets, TicketAdda platform, event listing India, event management services, virtual event tickets, online ticket platform, trending events India, concert tour India, TicketAdda booking site, show tickets online, TicketAdda relaunch, 2026 events, new year events India, Holi party tickets, Christmas events, New Year concerts, DJ nights India, EDM events, event discovery platform India, TicketAdda exclusive offers, movie premiere tickets, sports events booking, live event booking app">
+
     <meta name="author" content="TicketAdda Pvt. Ltd.">
 
     <!-- ✅ Canonical URL -->
@@ -65,7 +65,7 @@
   "url": "https://www.ticketadda.in",
   "logo": "https://www.ticketadda.in/logo.png",
   "sameAs": [
-    "https://www.instagram.com/ticketadda",
+    "https://www.instagram.com/ticketadda.in",
     "https://www.facebook.com/ticketadda",
     "https://www.linkedin.com/company/ticketadda",
     "https://x.com/ticketadda"
